Fix responsive BrowseCard on mobile

--- a/src/COMPONENTS/BrowseCardsComponent/BrowseCards.css
+++ b/src/COMPONENTS/BrowseCardsComponent/BrowseCards.css
@@ -6,11 +6,11 @@
   padding: 1.5rem 0.6rem;
   border-radius: 10px;
   background-color: white;
-  height: 100%;
+  height: 350px;
 }
 .browsecardImg {
   width: 100%;
-  height: 100%;
+  height: 300px;
   overflow: hidden;
 }
 .browsecardImg img {
@@ -21,10 +21,10 @@
   transition: all 0.3s ease-in-out;
   position: relative;
 }
-.likedProps{
+.likedProps {
   z-index: 1;
 }
-.likedProps i{
+.likedProps i {
   font-size: 1.3rem;
   cursor: pointer;
 }
@@ -75,7 +75,12 @@
   height: 30px;
   object-fit: cover;
 }
-@media (min-width: 610px) and (max-width: 950px) {
+.browsecard,
+.browsecardImg,
+.browsecardInfo {
+  border: 1px solid red; /* Remove once fixed */
+}
+@media (min-width: 601px) and (max-width: 950px) {
   .browsecard {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -91,7 +96,7 @@
   }
   .browsecardImg {
     width: 100%;
-    height: 100%;
+    height: 350px;
   }
   .browsecardImg img {
     object-fit: cover;
@@ -116,16 +121,17 @@
     box-shadow: 0px 0px 5px grey;
     padding: 1rem 0.6rem;
     border-radius: 10px;
-    height: 100%;
     width: 100%;
+    height: 100%;
   }
-    .browsecardInfo {
+  .browsecardInfo {
     line-height: 1.4rem;
     gap: 0.1rem;
   }
   .browsecardImg {
     width: 100%;
-    height: 100%;
+    height:auto;
+    object-fit: cover;
   }
   .browsecardInfoTop {
     flex-wrap: wrap;
@@ -133,7 +139,7 @@
   .browsecardInfoTop hr {
     display: none;
   }
-    .browsecardInfoBottom {
+  .browsecardInfoBottom {
     flex-direction: column;
     align-items: flex-start;
     line-height: 2rem;
